# mattermost-bridge

./: .gitguardian.yaml  Dockerfile  Makefile  README.md  auth.py  config.py  main.py  pyproject.toml  services.py
.github/workflows/: deploy.yml
tests/: test_health.py  test_services.py
