[project]
name = "mattermost-bridge"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "addict>=2.4.0",
    "fastapi[standard]>=0.119.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.3",
    "pydantic-settings==2.11.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.1",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
addopts = "--cov --cov-append --cov-report term-missing --no-cov-on-fail --no-header --disable-warnings -rf --durations=5"
testpaths = ["tests"]
